# DCAS

./: KNOWLEDGE_GRAPH_CONSTRUCTION_GUIDE.md  KNOWLEDGE_GRAPH_SUMMARY.md  README.md  README_knowledge_graph.md  UV_DEPLOYMENT_GUIDE.md  WEB_DASHBOARD_GUIDE.md  clean_data.py  course_knowledge_graph_builder.py  course_knowledge_graph_production.py  deploy_dashboard.sh  deploy_knowledge_graph.sh  estimate_graphrag_cost.py  fix_production_issues.sh  llamafactory_dataset_info_dcas_job_skills.json  llamafactory_dataset_info_dcas_job_skills_cleaned.json  llamafactory_dataset_info_dcas_job_skills_full.json  local_skill_extractor.py  local_skill_extractor_mlx.py  main.py  prepare_llamafactory_data.py  pyproject.toml  query_knowledge_graph.py  requirements.txt  requirements_knowledge_graph.txt  skill_extractor.py  start_dashboard.sh  start_dashboard_server.sh  streamlit_dashboard.py  verify_environment.py  本地模型说明.md
datasets/: job_skills_dataset_20250710_170253.csv  job_skills_dataset_20250710_171036.csv
datasets/Course Details/General/: Algebra_I.json  (+1051 more)
knowledge_graph_output/: graph_summary.json  summary_report_20250714_194625.md
knowledge_graph_output/analysis/: topic_analysis_20250714_194541.json
knowledge_graph_output/embeddings/: course_embeddings_20250714_194502.pkl  course_embeddings_20250714_194540.pkl  course_embeddings_20250714_194623.pkl
knowledge_graph_output_production/: production_report_20250715_192249.md
参考论文/: 2501.10332v1.docx  2501.15749v1(1).docx  2501.15749v1.docx  2502.02780v1.docx  2502.12633v2.docx  2505.02699v1.docx  2505.20642v1.docx  9_paper.docx
(+7 files in other folders)
