[project]
name = "dcas-knowledge-graph"
version = "0.1.0"
description = "DCAS Course Knowledge Graph Construction System"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "networkx>=3.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.5.0",
    "plotly>=5.0.0",
    "streamlit>=1.28.0",
    "psutil>=5.8.0",
    "tqdm>=4.64.0",
    "seaborn>=0.11.0",
    "pillow>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "flake8>=4.0.0",
    "jupyter>=1.0.0",
]

gpu = [
    "torch>=2.0.0",
]

mlx = [
    "mlx>=0.5.0",
    "mlx-lm>=0.2.0",
]

[dependency-groups]
dev = [
    "matplotlib>=3.7.5",
    "networkx>=3.1",
    "numpy>=1.24.4",
    "pandas>=2.0.3",
    "pillow>=10.4.0",
    "plotly>=6.2.0",
    "psutil>=7.0.0",
    "scikit-learn>=1.3.2",
    "seaborn>=0.13.2",
    "streamlit>=1.40.1",
    "torch>=2.5.1",
    "tqdm>=4.67.1",
    "transformers>=4.46.3",
]
